2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* add can_act_charmed and made checks use it
	* keyactions.cc: fix inventory skip bug introduced in 6571

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty: Space pauses excluded for charmed party members
	* Fixed space pauses failed read caused by last revision

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added charm difficulty to combat options gump.
		gumps/CombatOptions_gump.*
	* Indenting: gamemgr/sigame.cc

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added an option to make charmed more difficult.
		actors.cc, combat.cc, combat_opts.h, gamewin.cc,
		keyactions.cc, gumps/Face_stats.cc: It currently blocks
		inventory access to charmed party members and you cannot
		talk to charmed npcs through doubleclick event.

		'config/gameplay/combat/charmDifficulty' option is hard or
		normal with hard having these restrictions. Default is normal

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: fix (hopefully) find_opponent bugs not fixed
		properly in 6557 and 6558.

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*gumps/CombatStats_gump.cc, gumps/Paperdoll_gump.cc, gumps/Stats_gump.cc: Added Oink!
	text when failed copy protection flag is set

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*actors.cc, gamewin.*, objs/objs.cc, usecode/ucinternal.cc: The missing Black Gate
		failed copy protection function call (random speak) has been added. Oink! is now
		used for all item say and all click descriptions except non-Avatar npc names when
		the copy protection flag is set. Discrepancies are posted in feature # 611028.

2010-12-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	*cheat.cc: heal_party now cures charmed, paralysis, and cursed flags. It also resets
		temperature but does not remove the freezing flag.
